--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -123,7 +123,7 @@ hr {
 }
 .none-input {
   margin-bottom: 2px;
-  padding: 9px;
+  padding: 9px 0 9px 9px;
   background-color: #EBEBEB;
   border: none;
   line-height: 24px;
